Add psql and oom troubleshooting steps
Summary: Updated troubleshooting steps for some sbt bugs

Test Plan: validated with venkatesh devserver

Reviewers: bharat, venkatesh

Reviewed By: bharat

Subscribers: jeff, jenkins-bot, yugaware

Differential Revision: https://phabricator.dev.yugabyte.com/D3597